# quill

./: .env.example  .gitignore  README.md  data.json  down.py  hello.py  locate.py  main.py  mediatest.py  pyproject.toml  test_key_manager.py
src/: factory.py
src/service/: base.py  helper.py  keyword_processer.py  llm.py  media_processer.py  translator.py  utils.py
src/service/models/: base.py  gemini.py  insurance.py
src/service/prompt/: normal.py  translate_agent.py
