[project]
name = "quill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "drissionpage>=4.1.0.12",
    "fake-useragent>=1.5.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "yt-dlp>=2024.11.18",
]
